refactor: Use length-prefixed protobuf format for balance checkpoints
  Address PR review comments:

  - Rename BalanceCsvValidator to BalanceProtobufValidator (downloads .pb.gz files)
  - Change checkpoint file format to length-prefixed protobufs:
    [blockNumber (8 bytes)][length (4 bytes)][raw protobuf bytes]
  - Add token balance support via BalanceProtobufParser.parseWithTokens()
  - Add direct midnight targeting in BalanceFileBucket.downloadMidnightBalanceFile()
  - Update mergeRecordStreamItems to handle replacements (same timestamp = replace)
  - Remove unused BalanceProtobufParser.parseAndWrite() method

  Note: Existing .zstd checkpoint files need regeneration with new format.

Signed-off-by: Rocky Thind <harpender.t@swirldslabs.com>